20240910 最後一次更新

--- a/notes/20240910.md
+++ b/notes/20240910.md
@@ -38,3 +38,21 @@ b = a;
 
 
 ![alt text](<../teacher_save/螢幕擷取畫面 2024-09-10 142258.png>)
+
+五、使用 commend 執行 java 與 javac 的編譯時，commend 需要置於在套件的進入點 - 
+
+(比如 import com.uuu.kkk，而 uuu 在 src 資料夾下，那麼commend 的位置就要在 src)
+
+![alt text](<../teacher_save/螢幕擷取畫面 2024-09-10 155100.png>)
+
+六、將Java打包成.jar - 
+
+1. 設定系統變數JAVA_HOME
+2. 在PATH內，設定%JAVA_HOME%\bin
+3. 建立txt檔，並設定 Main-Class: com.systex.main.TestProduct (最後面要換一行)
+4. cmd jar -c --file fool.jar(生成的.jar名稱) --manifest fool.txt(文字檔名稱)
+
+七、Main進入點傳值
+public void Main(String args[]) 中的 args 可由進入點先給值，
+比如 java com.systex.main.TestPoint 20 就會對main傳值，
+![alt text](<../teacher_save/螢幕擷取畫面 2024-09-10 165347.png>)
