--- a/notes/20240910.md
+++ b/notes/20240910.md
@@ -17,23 +17,22 @@
 三、指派 - 
 
 Java 有指派，但沒有指派運算子(已廢棄)，
-
+```java
 1. a = 100;
 2. a = b;
 3. a = a + b;
 4. a = Math.random();
 5. Fool a = new Fool();
-
+```
 都是指派的一種，其中 a = b 會直接複製b給 a 並在各佔據獨立的記憶體空間，意即 a = b 會導致記憶體被佔用了 2 個 a 的空間 
 
 四、Java 單一介面的 Pass by Value -
 
 當同一個物件被指派到不同變數時，比如:
-
+```java
 a = new Fool();
-
 b = a;
-
+```
 此時 a 與 b 都指向相同的物件，使用 a.setValue(5); 與 b.setAns(2); 時都是修改同一個物件內容
 
 
