--- a/notes/20240912.md
+++ b/notes/20240912.md
@@ -187,3 +187,31 @@ a[2] = true;
 
 3. 基本型別的陣列存放值，參考型別存放記憶體位置
 
+
+Java 打包(重講)(回去看一下)
+--------------
+java 
+maven
+ivy
+build lifecycle
+pom.xml
+spring-boot-starter-parent
+
+交給主管的的檔案應該只要有
+```
+src
+--main
+--|java
+  --|test
+--|test
+  --|java
+```
+設定.gitignore
+
+Maven(週五有作業)
+-----------------
+Spring
+Guava
+Jackson
+
+
