--- a/notes/20240910.md
+++ b/notes/20240910.md
@@ -9,8 +9,8 @@
 二、邏輯完整性 - 
 
 1. Java 只會根據語句判斷是否有邏輯的失誤，像下圖會編譯失敗
-![alt text](image.png)
-![alt text](image-1.png)
+![alt text](../teacher_save/image.png)
+![alt text](../teacher_save/image-1.png)
 
 改回 if - else 的寫法才能通過
 
@@ -38,7 +38,8 @@ b = a;
 
 ![alt text](<../teacher_save/螢幕擷取畫面 2024-09-10 142258.png>)
 
-五、使用 commend 執行 java 與 javac 的編譯時，commend 需要置於在套件的進入點 - 
+五、使用 commend 執行 java 與 javac 的編譯時
+，commend 需要置於在套件的進入點 - 
 
 (比如 import com.uuu.kkk，而 uuu 在 src 資料夾下，那麼commend 的位置就要在 src)
 
