--- a/notes/20240913.md
+++ b/notes/20240913.md
@@ -192,6 +192,19 @@ Map<Integer, String> a = new HashMap<>(); // 也一樣
 ![alt text](<../teacher_save/螢幕擷取畫面 2024-09-13 153936.png>)
 
 
+java 執行時用的 環境變數(重要)
+--------------------
+```java
+System.getProperty(""); // 可用這段取得環境變數
+``` 
+ 
+path.separator 路徑分割符號(預設為;)
+file.separator 檔案路徑分割符號(預設為\)
+
+可用這個來為 java 在執行時增加環境變數
+![alt text](<../teacher_save/螢幕擷取畫面 2024-09-13 165724.png>)
+
+
 Maven
 -----
 用java寫的，只要有JRE就可以跑
@@ -203,10 +216,18 @@ Maven
 4. %JAVA_HOME% 也要確認
 5. 設定M2_HOME，路徑是 mavan資料夾\bin
 6. 在PATH內放入 %M2_HOME%\bin
-7. mvn -v 看有沒有成功
-<!-- 4. 設定 MAVEN_OPTS 的環境變數(不是path，是%MAVEN_OPT%) -->
+7. mvn -v 看有沒有成功<!-- 4. 設定 MAVEN_OPTS 的環境變數(不是path，是%MAVEN_OPT%) -->
 8. 在pom.xml 新增<packaging>jar</packaging>
 9. gitignore排除!src/ !pom.xml以外的東西
+
+使用
+1. 在suite 建立maven專案
+2. Run as ，mavan建立新的(命名為package)
+3. 在target資料夾找到jar
+4. java -cp a.jar classmane
+
+5. mvn package 生成target資料夾
+6. mvn clean 刪除target資料夾
 
 
 常用
@@ -229,6 +250,7 @@ Dynamix web oriject
 提示1: 用不會重複的set
 
 提示2: clation
+
 
 
 
