--- a/notes/20240919.md
+++ b/notes/20240919.md
@@ -122,3 +122,32 @@ $[ header.User-Agent ] // 使用中括號表示不做運算，直接取得header
 <%@page isELIgnored %> // 關閉整個頁面的 EL 檢查
 
 ```
+
+## MVC 架構
+![alt text](<../teacher_save/螢幕擷取畫面 2024-09-19 161405.png>)
+
+
+## 用於區分程式碼架構的四個邏輯
+
+1. 展示邏輯(interface)
+2. 控制邏輯(controller)(控制應用程式的走向)
+3. 商業邏輯(business)(針對業務需求)
+4. 資料存取邏輯(data)
+
+## java專案 架構?工具?
+```
+JCA (連接)=>   
+  Main Frame
+  As1400
+  ERP
+
+JAX-Ws (雲端) =>
+  Web Service
+  (金流、物流、電信)
+
+JDBC (SQL) =>
+  資料庫
+
+JAX-RS (微服務，對接外部) => 
+  Browser、Javascript(Angular)、GUI、Mobile
+```
